--- a/elevatedramen.html
+++ b/elevatedramen.html
@@ -32,6 +32,7 @@
       <div class="ScrollBar1" style="width: 11px; height: 95px; left: 693px; top: 83px; position: absolute; background: #132A13; border-radius: 5px"></div>
       <div class="ElevatedRamenIngredients" style="width: 416px; height: 121px; left: 130px; top: 9px; position: absolute; text-align: center"><span style="color: black; font-size: 40px; font-family: Inter; font-style: italic; font-weight: 400; word-wrap: break-word">Elevated Ramen<br/></span><span style="color: black; font-size: 20px; font-family: Inter; font-weight: 400; word-wrap: break-word"><br/></span><span style="color: black; font-size: 30px; font-family: Inter; font-weight: 400; text-decoration: underline; word-wrap: break-word">Ingredients</span></div>
     </div>
+    <input type="button" value="reload" style="background-color: white; width: 80px; height: 40px; left: 1000px; top: 793px; position: absolute; text-align: center; color: black; font-size: 20px; font-family: Inria Serif; font-weight: 400; word-wrap: break-word">
     <div class="Footer" style="width: 1574.52px; height: 137px; left: 0px; top: 845px; position: absolute">
       <div class="Rectangle17" style="width: 1512px; height: 137px; left: 0px; top: 0px; position: absolute; background: white; border: 1px black solid"></div>
       <div class="Background" style="width: 211.23px; height: 45.99px; left: 1147.05px; top: 59px; position: absolute; background: white; border: 1px black solid"></div>
